py(deps): Keep graphene and graphql-core at 2.x

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,13 +50,12 @@ packages = [
 python = "^3.6.0"
 aiohttp = "^3"
 asgiref = "^3"
-backports-datetime-fromisoformat = {version = "^1", python = "~3.6"}
-channels = "^3"
-dataclasses = {version = "^0.7", python = "~3.6"}
-Django = "^3"
+channels = "^4"
+Django = "^4"
 graphene = "^2.1"
-graphql-core = ">=2.2"
-msgpack = ">=0.6.1, <2"
+graphql-core = "^2.2"
+msgpack = "^1"
+
 [tool.poetry.dev-dependencies]
 # Development dependencies.
 # Version syntax: https://python-poetry.org/docs/dependency-specification/
