--- a/pyproject.toml
+++ b/pyproject.toml
@@ -175,3 +175,45 @@ whitelist_externals = poetry
 commands_pre = poetry install -v
 commands = poetry run pytest {posargs}
 """
+
+# --------------------------------------------------------------- PYTEST
+# https://docs.pytest.org/en/latest/reference.html#ini-options-ref
+[tool.pytest.ini_options]
+# Might be useful to enable logging for debug:
+# log_cli = true
+# log_cli_level = "DEBUG"
+# log_cli_format = "[%(levelname)s] [%(asctime)s,%(msecs)s] [%(thread)d %(threadName)s] - %(message)s"
+# log_cli_date_format = "%Y-%m-%dT%H:%M:%S"
+
+# pytest-pythonpath:
+# Set up paths to import Python modules from.
+python_paths = ". example"
+# pytest-django:
+# NOTE: This influence to both Pytest and to `pylint_django`, cause
+# in fact, it simply sets `DJANGO_SETTINGS_MODULE` environment variable.
+DJANGO_SETTINGS_MODULE = "example.settings"
+# Test files to explore.
+python_files = "**/test_*.py"
+# Default command-line arguments:
+#   - Enable coverage measurement and set config file.
+#   - Force verbose output: output list of tests by default.
+addopts = "--cov --verbose"
+
+# ----------------------------------------------------------- PYDOCSTYLE
+# Pydocstyle configuration reference:
+# http://www.pydocstyle.org/en/latest/usage.html#available-options
+[tool.pydocstyle]
+# Redefine match rules, cause by default it skips `test_*` files.
+match=".*\\.py"
+# Disable some checks:
+# - D202: No blank lines allowed after function docstring. We cannot
+#   follow this, cause Black inject blank line before function
+#   declaration and if it is a nested function when this violates this
+#   rule.
+# - D401: First line should be in imperative mood; try rephrasing. Often
+#   it is not possible. Especially for callback functions such as "A new
+#   message handler."
+# - D403: First word of the first line should be properly capitalized.
+#   There is nothing bad in using words like "WebSocket" or
+#   "MessagePack" even in the beginning of the docstring.
+add_ignore="D202,D401,D403"
