--- a/pyproject.toml
+++ b/pyproject.toml
@@ -185,9 +185,7 @@ commands = poetry run pytest {posargs}
 # log_cli_format = "[%(levelname)s] [%(asctime)s,%(msecs)s] [%(thread)d %(threadName)s] - %(message)s"
 # log_cli_date_format = "%Y-%m-%dT%H:%M:%S"
 
-# pytest-pythonpath:
-# Set up paths to import Python modules from.
-python_paths = ". example"
+pythonpath = ". example"
 # pytest-django:
 # NOTE: This influence to both Pytest and to `pylint_django`, cause
 # in fact, it simply sets `DJANGO_SETTINGS_MODULE` environment variable.
