--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ graphene = "^2.1"
 graphql-core = "^2.2"
 msgpack = "^1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 # Development dependencies.
 # Version syntax: https://python-poetry.org/docs/dependency-specification/
 black = { version = "*", allow-prereleases = true }
