py(deps): Add daphne dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ black = { version = "*", allow-prereleases = true }
 channels-redis = "*"
 coverage = "*"
 graphene-django = "*"
+daphne = "*"
 ipython = "*"
 isort = {version = "*", extras = ["pyproject"]}
 mypy = "*"
