--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ pytest-asyncio = "*"
 pytest-cov = "*"
 pytest-django = "*"
 pytest-pythonpath = "*"
+pytest-watcher = "*"
 pytest-xdist = "*"
 tox = "*"
 types-dataclasses = {version = "*", python = "~3.6"}
