pyproject: Remove pylint-quotes from load-plugins

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,7 +106,7 @@ profile="black"
 # https://github.com/PyCQA/pylint-django/issues/276
 #jobs = "0"
 jobs = "1"
-load-plugins = "pylint_quotes,pylint_django"
+load-plugins = "pylint_django"
 # Do not store results of previous runs.
 persistent = "no"
 # Allow to load C extension modules.
@@ -134,10 +134,6 @@ variable-rgx = "[a-z_][a-z0-9_]{1,64}$"
 [tool.pylint.FORMAT]
 max-line-length="88"
 max-module-lines="9000" # Right, over nine thousand!
-[tool.pylint.STRING_QUOTES]
-docstring-quote = "double"
-string-quote = "double-avoid-escape"
-triple-quote = "double"
 [tool.pylint.PYLINT_DJANGO]
 # NOTE: When Pytest runs Pylint this setting is overwritten by the
 # environment variable `DJANGO_SETTINGS_MODULE` set by `pytest-django`.
