py(deps): Allow any django >= 4 (support django 5+)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ python = ">=3.10.0,<4"
 aiohttp = "^3"
 asgiref = "^3"
 channels = "^4"
-Django = "^4"
+Django = ">=4"
 graphene = "^2.1"
 graphql-core = "^2.2"
 msgpack = "^1"
